--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,11 +13,11 @@
     {% include head-custom.html %}
   </head>
   <body>
-    <a id="skip-to-content" href="#content">Skip to the content.</a>
+    <!-- <a id="skip-to-content" href="#content">Skip to the content.</a>  -->
 
     <header class="page-header" role="banner">
-      <h1 class="project-name">{{ default: site.title | default: site.github.repository_name | page.title }}</h1>
-      <h2 class="project-tagline">{{ default: site.description | default: site.github.project_tagline | page.description }}</h2>
+      <h1 class="project-name">{{ site.title | default: site.github.repository_name | default: page.title }}</h1>
+      <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline | default: page.description }}</h2>
       <!-- <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a> -->
       <!-- <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a> -->
     </header>
