--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,13 @@
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline | default: page.description }}</h2>
       <!-- <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a> -->
       <!-- <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a> -->
+      <!-- Home Button -->
+      <a href="{{ '/' | relative_url }}" class="btn">Home</a>
+
+      <!-- Experience Button -->
+      <a href="{{ '/' | relative_url }}" class="btn">Experience</a>
+
+
     </header>
 
     <main id="content" class="main-content" role="main">
