Updating layout navigation

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,8 +24,9 @@
       <a href="{{ '/' | relative_url }}" class="btn">Home</a>
 
       <!-- Experience Button -->
-      <a href="{{ '/' | relative_url }}" class="btn">Experience</a>
-
+      <a href="{{ '/education' | relative_url }}" class="btn">Education</a>
+      <!-- Experience Button -->
+      <a href="{{ '/experience' | relative_url }}" class="btn">Experience</a>
 
     </header>
 
