--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="site-footer">
     <hr>
-    <p>Contact me at:</p>
+    <p>Contact:</p>
     <ul>
         <li>Primary Email: <a href="mailto:german.villalobos0@gmail.com">german.villalobos0@gmail.com</a></li>
         <li>Secondary Email: <a href="mailto:german.villalobos.cye@gmail.com">german.villalobos.cye@gmail.com</a></li>
