--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,7 @@
 <footer class="site-footer">
-<meta name="theme-color" content="#157878">
+ <meta name="viewport" content="width=device-width, initial-scale=1">
+ <meta name="theme-color" content="#157878">
+ <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <hr>
     <p>Contact:</p>
     <ul>
