--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,8 @@
       <a href="{{ '/education' | relative_url }}" class="btn">Education</a>
       <!-- Experience Button -->
       <a href="{{ '/experience' | relative_url }}" class="btn">Experience</a>
-      <a href="<< '/projects' | relative_url }}" class="btn">Projects</a>
+      
+      <a href="{{ '/projects' | relative_url }}" class="btn">Projects</a>
     </header>
 
     <main id="content" class="main-content" role="main">
